fix loading indicator background overlap in desktop view

--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -1378,6 +1378,11 @@
   flex-direction: column-reverse;
   transition: all .3s ease-in-out;
 
+  @media screen and (min-width: $end-small) {
+    top: calc(74px + 54px);
+    bottom: 54px;
+  }
+
     div.loading-text {
         color: $textdrk;
         font-size: 20px;
